# 2d-Graphics

./: CMakeLists.txt  Readme.md  complex.cpp  complex.h  figure_factory.cpp  figure_factory.h  figures.cpp  figures.h  includes.h  main.cpp  scene.cpp  scene.h  screen.cpp  screen.h
linux/: linux_console.cpp  linux_console.h  linux_screen.cpp  linux_screen.h
win/: win_console.cpp  win_console.h  win_screen.cpp  win_screen.h
